test/positive/feature_interfaces.java

  public interface feature_interfaces {}

