test/negative/InterfacesWithSameName/B/A.java
package P;
public interface A {
}
